@@ -130,8 +130,10 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URLEncoder;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.util.Comparator;
 import java.util.List;
 
 @Service
@@ -144,29 +146,38 @@ public class FaqService {
 
     public String getAnswer(String question, String languageOrLang) {
         String lang = normalizeLang(languageOrLang);
+        String q = question.trim();
 
-        // 1. Try exact DB match
-        List<Faq> exactMatch = faqRepository.findByQuestionAndLanguage(question.trim(), lang);
-        if (!exactMatch.isEmpty()) {
-            return exactMatch.get(0).getAnswer();
+        // 1. Try exact match
+        Faq exact = faqRepository.findExact(q, lang);
+        if (exact != null) {
+            return exact.getAnswer();
         }
 
-        // 2. Try FULLTEXT DB search
-        List<Faq> faqs = faqRepository.searchByKeyword(question, lang);
-        String dbAnswer = faqs.isEmpty() ? null : faqs.get(0).getAnswer();
-        double dbScore = calculateDbScore(question, faqs);
-
-        if (dbAnswer != null && dbScore >= 0.7) {
-            return dbAnswer;
+        // 2. If single-word query → use keyword LIKE search and prefer shortest question
+        if (!q.contains(" ")) {
+            List<Faq> candidates = faqRepository.findByKeyword(q, lang);
+            if (!candidates.isEmpty()) {
+                Faq best = candidates.stream()
+                        .min(Comparator.comparingInt(f -> f.getQuestion().length()))
+                        .orElse(candidates.get(0));
+                return best.getAnswer();
+            }
         }
 
-        // 3. Try Wikipedia
-        String wikiAnswer = searchWikipedia(question, lang);
-        if (wikiAnswer != null && !wikiAnswer.isBlank()) {
+        // 3. Otherwise → use fulltext search
+        List<Faq> faqs = faqRepository.searchByKeyword(q, lang);
+        if (!faqs.isEmpty()) {
+            return faqs.get(0).getAnswer();
+        }
+
+        // 4. Try Wikipedia if DB fails
+        String wikiAnswer = searchWikipedia(q, lang);
+        if (wikiAnswer != null && containsKeywords(q, wikiAnswer)) {
             return wikiAnswer;
         }
 
-        // 4. Nothing found
+        // 5. Fallback message
         if (lang.equals("BN")) {
             return "দুঃখিত, আমি এটির নির্দিষ্ট উত্তর খুঁজে পাইনি। অনুগ্রহ করে প্রশ্নটি ইংরেজিতে করে দেখুন।";
         } else {
@@ -183,34 +194,35 @@ public class FaqService {
         return "EN";
     }
 
-    private double calculateDbScore(String question, List<Faq> faqs) {
-        if (faqs.isEmpty()) return 0.0;
-        String q = question.toLowerCase();
-        String text = faqs.get(0).getQuestion().toLowerCase();
-        String[] words = q.split("\\s+");
-        int matchCount = 0;
-        for (String w : words) {
-            if (text.contains(w)) matchCount++;
+    private boolean containsKeywords(String question, String wikiAnswer) {
+        if (wikiAnswer == null || wikiAnswer.isBlank()) return false;
+
+        String qLower = question.toLowerCase();
+        String answerLower = wikiAnswer.toLowerCase();
+
+        // Full phrase check first
+        if (answerLower.contains(qLower)) return true;
+
+        // Word match threshold
+        String[] keywords = qLower.split("\\s+");
+        int matches = 0;
+        for (String k : keywords) {
+            if (answerLower.contains(k)) matches++;
         }
-        return (double) matchCount / words.length;
+        return matches >= 2;
     }
 
-    // --- Wikipedia Search ---
     private String searchWikipedia(String question, String language) {
         try {
             String langCode = language.equals("BN") ? "bn" : "en";
             String encoded = URLEncoder.encode(question, StandardCharsets.UTF_8);
-            String urlStr = "https://" + langCode +
-                    ".wikipedia.org/w/api.php?action=query&prop=extracts&exintro=true&explaintext=true&titles="
-                    + encoded + "&format=json&utf8=";
+            String urlStr = "https://" + langCode + ".wikipedia.org/w/api.php?action=query&list=search&srsearch="
+                    + encoded + "&format=json&utf8=&srlimit=1";
 
-            URL url = new URL(urlStr);
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+            HttpURLConnection conn = (HttpURLConnection) new URI(urlStr).toURL().openConnection();
             conn.setRequestProperty("User-Agent", "LegalFAQBot/1.0 (https://example.com)");
 
-            try (BufferedReader br = new BufferedReader(
-                    new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
-
+            try (BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
                 StringBuilder response = new StringBuilder();
                 String line;
                 while ((line = br.readLine()) != null) {
@@ -218,13 +230,13 @@ public class FaqService {
                 }
 
                 String result = response.toString();
-                int idx = result.indexOf("\"extract\":\"");
-                if (idx != -1) {
-                    int start = idx + 11;
+                int snippetIndex = result.indexOf("\"snippet\":\"");
+                if (snippetIndex != -1) {
+                    int start = snippetIndex + 11;
                     int end = result.indexOf("\"", start);
                     if (end > start) {
                         String snippet = result.substring(start, end);
-                        return snippet.replaceAll("\\\\n", " ").trim();
+                        return snippet.replaceAll("<[^>]+>", ""); // remove HTML tags
                     }
                 }
             }
@@ -234,7 +246,4 @@ public class FaqService {
         return null;
     }
 }
-
-
-
 
